# eth-client-multilang

./: .gitignore  README.md
clients/abis/: SimpleStorage.json
clients/js/: .env.example  README.md  index.js  package.json
clients/py/: main.py
clients/rust/: .gitignore  Cargo.toml  README.md
clients/rust/src/: main.rs
clients/rust/test/: hi.rs
contracts/: README.md
contracts/src/: Contract.sol
src/: main.rs
